# wrash

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  files.go  go.mod  go.sum  main.go  utils.go  utils_test.go
examples/: completion_example.yaml
examples/completions/: git
pkg/: builtins.go  builtins_test.go  complete.go  complete_test.go  history.go  history_test.go  options.go  session.go  session_test.go  suggestions.go  suggestions_test.go  utils.go  utils_test.go
pkg/args/: errors.go  parse.go  parse_test.go  types.go  types_test.go
pkg/cmd/wrash/: files.go  main.go
src/: builtins.rs  completion.rs  error.rs  history.rs  main.rs  session.rs
src/argv/: error.rs  expand.rs  mod.rs  split.rs
tests/resources/: completion_example.yaml
tests/resources/history/: history.invalid.yaml  history.yaml
