[package]
name = "wrash"
version = "0.1.3"
authors = ["joshmeranda <joshmeranda@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
directories = "4.0.1"
dirs = "4.0.0"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_yaml = "0.8.21"
termion = "1.5.6"
glob = "0.3.0"
faccess = "0.2.4"
regex = "1.5.4"
ctrlc = "3.2.1"

[dev-dependencies]
tempfile = "3.2.0"
